[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/DialogUI/63 sin título_20220723001216.png" type="Texture" id=1]
[ext_resource path="res://Main Resources/Sprites/Interfaz/DialogUI/39 sin título_20220724100706.png" type="Texture" id=2]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main Resources/Fuentes/PKMN RBYGSC.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Escenas/Interfaces/Dialog/dialog_solo.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 14
extra_spacing_top = 3
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "playin"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("text_dialog:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("next:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear1"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 0.287175, 0.287175 ),
"update": 0,
"values": [ Vector2( 1100, 213 ), Vector2( 204, 213 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../background:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.54902 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("box_spr:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 616, 174 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("name_text:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("text_dialog:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("character_ico:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "appear2"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 0.287175, 0.287175 ),
"update": 0,
"values": [ Vector2( -1100, 213 ), Vector2( 204, 213 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../background:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.54902 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("box_spr:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 616, 174 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("text_dialog:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("name_text:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("character_ico:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "appear3"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../background:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.25 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.54902 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("box_spr:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.25 ),
"update": 0,
"values": [ Vector2( 53, 15 ), Vector2( 616, 174 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("box_spr:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.25 ),
"update": 0,
"values": [ Vector2( 281.5, 79.5 ), Vector2( 3.05176e-05, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("text_dialog:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("name_text:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 204, 213 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("character_ico:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="dialog_solo" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 5 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="coso" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 588.0
margin_top = -87.0
margin_right = 1204.0
margin_bottom = 87.0
__meta__ = {
"_edit_lock_": true
}

[node name="box_spr" type="TextureRect" parent="coso"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -87.0
margin_right = 308.0
margin_bottom = 87.0
texture = ExtResource( 1 )
expand = true

[node name="character_ico" type="TextureRect" parent="coso"]
margin_left = 22.0
margin_top = 30.0
margin_right = 138.0
margin_bottom = 146.0
__meta__ = {
"_edit_lock_": true
}

[node name="name_text" type="Label" parent="coso"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -65.0
margin_right = 277.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 3 )
text = "Nombre"
__meta__ = {
"_edit_lock_": true
}

[node name="text_dialog" type="RichTextLabel" parent="coso"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -44.0
margin_right = 286.0
margin_bottom = 59.0
custom_fonts/normal_font = SubResource( 4 )
visible_characters = 0
percent_visible = 0.0
scroll_active = false

[node name="next" type="TextureRect" parent="coso"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -18.0
margin_right = 15.0
margin_bottom = 12.0
texture = ExtResource( 2 )
expand = true

[node name="anim_txt" type="AnimationPlayer" parent="coso"]
anims/playin = SubResource( 6 )

[node name="anim" type="AnimationPlayer" parent="coso"]
anims/appear1 = SubResource( 2 )
anims/appear2 = SubResource( 7 )
anims/appear3 = SubResource( 9 )

[connection signal="animation_finished" from="coso/anim_txt" to="." method="_on_anim_txt_animation_finished"]
[connection signal="animation_finished" from="coso/anim" to="." method="_on_anim_animation_finished"]
